# hedis-cluster

./: LICENSE  README.md  Todo.md  hedis-cluster.cabal  stack.yaml
docker/: compose-cluster.yml  compose-single.yml
docker/7000/: redis.conf
docker/7001/: redis.conf
docker/7002/: redis.conf
docker/7003/: redis.conf
docker/7004/: redis.conf
docker/7005/: redis.conf
src/: Simple.hs
src/Database/Redis/: Cluster.hs
src/Database/Redis/Cluster/: CRC16.hs  Commands.hs  Connection.hs  Types.hs
test/: Test.hs
test/Test/Database/Redis/: Cluster.hs
test/Test/Database/Redis/Cluster/: CRC16.hs  Types.hs
