name:                hedis-cluster
version:             0.1.0.0
synopsis:
  Client library for the Redis datastore in cluster mode.
  Aiming to enhance hedis by adding cluster focussed logic.
-- description:
homepage:            https://github.com/runjak/hedis-cluster#readme
license:             BSD3
license-file:        LICENSE
author:              Jakob Runge <sicarius@g4t3.de>
maintainer:          Jakob Runge <sicarius@g4t3.de>
copyright:           BSD3
category:            Database
build-type:          Simple
homepage:            https://github.com/runjak/hedis-cluster
bug-reports:         https://github.com/runjak/hedis-cluster/issues
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:        -Wall -fwarn-tabs
  exposed-modules:     Database.Redis.Cluster,
                       Database.Redis.Cluster.Commands,
                       Database.Redis.Cluster.CRC16,
                       Database.Redis.Cluster.Types
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.9,
                       crc16 >= 0.1.0,
                       hedis >= 0.9.8,
                       network >= 2.6.3.1,
                       unordered-containers >= 0.2.8.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/runjak/hedis-cluster

test-suite hedis-cluster-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    base,
                    bytestring >= 0.9,
                    hedis-cluster,
                    hedis >= 0.9.8,
                    HUnit
  other-modules: Test.Database.Redis.Cluster.CRC16,
                 Test.Database.Redis.Cluster.Types
  default-language: Haskell2010
